# zense_grpc_pywrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  gen_protobuf_codes.py  requirements.txt  rgbd_simple_server.py  rgbd_viewer_client.py  setup.py  setup.sh  zense_grpc_pywrapper.pyx
cfg/: camera.toml  template.toml
example/depthir_with_laser_config/: depthir_simple_server.py  depthir_viewer_client.py
example/rgbd/: rgbd_simple_server.py  rgbd_viewer_client.py
example/wdr/: wdr_simple_server.py  wdr_viewer_client.py
include/: common.hpp  pico_zense_manager.hpp  pico_zense_server_impl.hpp
protos/: zense.proto
scripts/: gen_protobuf_codes.py  rgbd_simple_server.py  rgbd_viewer_client.py  simple_client.py
scripts/utils/: convert_pb_ndarray.py
src/: pico_zense_manager.cpp  pico_zense_server_impl.cpp  pico_zense_simple_publisher.cpp
